Update test reports and binary files after recent changes
- Updated test execution time in UserOrgManagementApplicationTests report.
- Adjusted test count and execution time in UserServiceTest report.
- Updated compiled class files for UserOrgManagementApplicationTests and UserServiceTest.
- Updated user-organization-management JAR and original JAR files.